<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    tools:context=".ui.detail.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_detail_repository"
        style="@style/TextDetail.Value"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_detail_followers"
        app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
        app:layout_constraintTop_toTopOf="@+id/txt_detail_followers"
        tools:text="@string/repository_count" />

    <TextView
        android:id="@+id/txt_detail_followers"
        style="@style/TextDetail.Value"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
        app:layout_constraintTop_toTopOf="@+id/img_detail_photo"
        tools:text="@string/followers_count" />

    <TextView
        android:id="@+id/txt_detail_following"
        style="@style/TextDetail.Value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/txt_detail_followers"
        tools:text="@string/following_count" />

    <TextView
        android:id="@+id/txt_followers"
        style="@style/TextDetail.Comment"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail_photo"
        app:layout_constraintEnd_toEndOf="@+id/txt_detail_followers"
        app:layout_constraintStart_toStartOf="@+id/txt_detail_followers"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail_followers" />

    <TextView
        android:id="@+id/txt_repository"
        style="@style/TextDetail.Comment"
        android:fontFamily="sans-serif-thin"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="@+id/txt_followers"
        app:layout_constraintEnd_toEndOf="@+id/txt_detail_repository"
        app:layout_constraintStart_toStartOf="@+id/txt_detail_repository" />

    <TextView
        android:id="@+id/txt_following"
        style="@style/TextDetail.Comment"
        android:fontFamily="sans-serif-thin"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/txt_followers"
        app:layout_constraintEnd_toEndOf="@+id/txt_detail_following"
        app:layout_constraintStart_toStartOf="@+id/txt_detail_following" />

    <TextView
        android:id="@+id/txt_detail_name"
        style="@style/TextDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/txt_detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/icn_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icn_location"
        app:layout_constraintTop_toTopOf="@+id/icn_location"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/txt_detail_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toBottomOf="@+id/icn_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icn_company"
        app:layout_constraintTop_toTopOf="@+id/icn_company"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/txt_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail_company"
        tools:text="@string/bio" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bio">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repositoryUP" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followersUP" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followingUP" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/icn_location"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detail_name"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <ImageView
        android:id="@+id/icn_company"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/company"
        app:layout_constraintEnd_toEndOf="@+id/icn_location"
        app:layout_constraintStart_toStartOf="@+id/icn_location"
        app:layout_constraintTop_toBottomOf="@+id/icn_location"
        app:srcCompat="@drawable/ic_baseline_work_24" />


</androidx.constraintlayout.widget.ConstraintLayout>